assets/css/style.css
:root {
    /* Colors */
    --font-color: #fff;
    --font-color2: #aaa;
    --link-color: #8cf;
    --link-visited: #dac5ff;
    --hover-color: #ffffcc;
    --highlight-color: #ffffcc;
    --border-color: #446979;
    --top-color: #313536;
    --bottom-color: #1D2021;
    --h1-color: #888;
    --h2-color: #777;
    --h3-color: #666;
    --h4-color: #d7ba7d;
    --code-color: #d7ba7d;
    --cite-color: #777;
    --callout-color: #313536;

    /* Misc */
    --margin: 10px;
    --margin-top: 20px;
    --padding: 10px;
    --radius: 8px;
    --border: 1px solid var(--top-color);

    /* Admonitions */
    --admon-note: var(--link-color);
    --admon-important: var(--border-color);
    --admon-tip: var(--h4-color);
    --admon-caution: var(--link-visited);
    --admon-warning: var(--link-visited);
}

* {
    margin: 0px;
    padding: 0px;
}

/* Layout */
body {
    background-color: var(--bottom-color);
    color: var(--font-color);
    font-family: HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;
}

nav {
    background-color: var(--bottom-color);
    border-radius: var(--radius) var(--radius) 0px 0px;
    font-size: 90%;
}

footer {
    color: var(--font-color2);
    background-color: var(--top-color);
    border-left: var(--border);
    border-right: var(--border);
    border-bottom: var(--border);
    border-radius: 0px 0px var(--radius) var(--radius);
    font-size: 70%;
    text-align: center;
}

footer a:link, footer a:visited {
    color: var(--font-color2);
    text-decoration: underline;
}

footer a:hover {
    color: var(--link-color);
    text-decoration: none;
}

#container, #main {
    width: 100%;
}

#split {
    display: flex;
    justify-content: flex-end;
    gap: 3rem;
    padding-top: var(--padding);
    border-left: var(--border);
    border-right: var(--border);
}

#categories, #tags {
    margin-bottom: var(--margin);
}

/* Content */
#content {
    width: 100%;
    flex-basis: auto;
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 0;
}

#content img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

#content table {
    border-collapse: collapse;
    text-align: left;
}

#content table tr {
    border-bottom: var(--border);
}

#content table tr:last-child {
    border-bottom: none;
}

#content table th {
    font-weight: bold;
    border-bottom: var(--border);
    border-right: var(--border);
    padding: var(--padding);
}

#content table td {
    border-right: var(--border);
    padding: var(--padding);
}

#content table th:last-child, #content table td:last-child {
    border-right: none;
}

#content h1 {
    text-decoration: none;
    border-bottom: 1px solid var(--h1-color);
    margin-bottom: 10px;
    font-size: 1.5em;
}

#content h1:before {
    content: "#";
    padding-right: 0.2em;
}

#content h2 {
    text-decoration: none;
    border-bottom: 1px solid var(--h2-color);
    margin-bottom: 10px;
    font-size: 1.5em;
}

#content h2:before {
    content: "##";
    padding-right: 0.2em;
}

#content h3:before {
    content: "###";
    padding-right: 0.2em;
}

#content h4:before {
    content: "####";
    padding-right: 0.2em;
}

/* Sidebar */
#sidebar {
    flex-grow: 0;
    flex-shrink: 0;
}

#sidebar a {
    display: block;
}

#header {
    background-color: var(--top-color);
    width: 100%;
}

#headline, #split, nav, footer {
    width: 50%;
    margin: 0px auto;
    padding: var(--padding);
}

#headline h1 {
    display: inline-block;
    text-decoration: none;
    border-bottom: none;
    font-size: 1.5em;
}

#headline h2 {
    display: inline-block;
    padding-left: var(--padding);
    border-bottom: none;
    font-size: 1.5em;
}

/* TOC */
#table-of-contents {
    float: right;
    margin: var(--margin-top) 0px var(--margin-top) var(--margin-top);
}

#table-of-contents #toc-header {
    color: var(--h4-color);
    text-decoration: underline;
    display: block;
    margin-bottom: var(--margin);
}

#table-of-contents li {
    padding: 0px;
}

#table-of-contents .toc-h2 {
    margin-left: 20px;
}

#table-of-contents .toc-h3 {
    margin-left: 25px;
}

#table-of-contents .toc-h4 {
    margin-left: 30px;
}

#table-of-contents .toc-h5 {
    margin-left: 35px;
}

/* Tags */
#tag-cloud {
    padding-top: var(--padding);
}

.tags a:before {
    content: "#";
}

/* Text */
a:link, a:visited {
    text-decoration: none;
    color: var(--link-color);
}

a:hover {
    color: var(--hover-color);
}

h1, h2, h3, h4, h5, h6 {
    margin: 10px 0px;
}

h1 {
    color: var(--h1-color);
    text-decoration: none;
    border-bottom: 1px solid var(--h1-color);
}

h2 {
    color: var(--h2-color);
    text-decoration: none;
    border-bottom: 1px solid var(--h2-color);
}

h3 {
    color: var(--h3-color);
    border-bottom: 1px solid var(--h3-color);
}

h4 {
    color: var(--h4-color);
    border-bottom: 1px solid var(--h4-color);
    margin-bottom: 15px;
}

h3, h4 {
    text-decoration: none;
    padding-top: 10px;
}

h6 {
    color: var(--h4-color);
    text-decoration: underline;
    background-color: black;
    display: none; /*inline; */
    padding: var(--padding);
    border: var(--border);
    border-bottom: 1px solid #000;
    padding-bottom: 1px;
    border-radius: var(--radius) var(--radius) 0px 0px;
}

hr {
    color: var(--link-color);
    border-style: solid;
}

/* Jekyll */
.post-list li {
    padding-top: var(--padding);
}

.post-meta {
    font-size: 80%;
}

.post-list li {
    display: block;
}

.post-content {
    text-align:  justify;
}

.post-content h2 {
    clear: both;
}

.post-content article {
    padding-right: var(--padding);
}

.post-content p {
    margin: var(--margin-top) 0px;
}

.post-content blockquote {
    padding: var(--padding);
}

.post-content blockquote::before {
    color: var(--highlight-color);
    content: '“';
    float: left;
    font-size: 500%;
    margin-top: -10px;
    margin-right: 5px;
}

.post-content blockquote cite {
    display: block;
    margin-top: 5px;
}

.post-content blockquote cite::before {
    color: var(--cite-color);
    content: '--';
    padding-right: 5px;
}

.post-content li {
    margin-left: 40px;
    color: var(--font-color2);
}

.post-content .highlighter-rouge {
    width: 100%;
}

.post-content .highlighter-rouge > div.highlight {
    display: grid;
}

.post-content p code.highlighter-rouge {
    color: var(--code-color);
}

.post-content pre {
    display: grid;
    text-align: left;
    padding: var(--padding);
    border: var(--border);
    background-color: #000;
    overflow-x: auto;
}

.post-content pre.highlight code {
    color: var(--font-color2) !important;
}

.post-tags {
    font-size: 70%;
}

.rss-subscribe {
    display: none;
}

/* Tagcloud */
#sidebar .set-1 {
    font-size: 100%;
}

#sidebar .set-2 {
    font-size: 110%;
}

#sidebar .set-3 {
    font-size: 120%;
}

#sidebar .set-4 {
    font-size: 130%;
}

#sidebar .set-5 {
    font-size: 140%;
}

/* Font Awesome */
span.icon>.fa {
    cursor: default;
}

.admonitionblock {
    margin-top: var(--margin-top);
    margin-bottom: var(--margin-top);
}

.admonitionblock td.icon {
    text-align: center;
    width: 80px;
}

.admonitionblock td.icon [class^="fa icon-"] {
    font-size: 2.5em;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
    cursor: default;
}

.admonitionblock td.icon .icon-note:before {
    content: "\f05a";
    color: var(--admon-note);
}

.admonitionblock td.icon .icon-tip:before {
    content: "\f0eb";
    color: var(--admon-tip);
}

.admonitionblock td.icon .icon-warning:before {
    content: "\f071";
    color: var(--admon-warning);
}

.admonitionblock td.icon .icon-caution:before {
    content: "\f06d";
    color: var(--admon-caution);
}

.admonitionblock td.icon .icon-important:before {
    content: "\f06a";
    color: var(--admon-important);
}

/* Asciidoc */
.conum[data-value] {
    display: inline-block;
    color: #fff !important;
    background: var(--callout-color);
    -webkit-border-radius: 1em;
    border-radius: 1em;
    text-align: center;
    font-size: .75em;
    width: 1.67em;
    height: 1.67em;
    line-height: 1.67em;
    font-family: "Open Sans", "DejaVu Sans", sans-serif;
    font-style: normal;
    font-weight: bold;
}

.conum[data-value] * {
    color: #fff !important;
}

.conum[data-value]+b {
    display: none;
}

.conum[data-value]::after {
    content: attr(data-value);
}

pre .conum[data-value] {
    position: relative;
    top: -.125em;
}

b.conum * {
    color: inherit !important;
}

.conum:not([data-value]):empty {
    display: none;
}

.colist {
    margin-top: var(--margin-top);
    margin-bottom: var(--margin-top);
}

p.tableblock {
    margin: 0px;
}

.highlight .hll {
    background-color: transparent !important;
    color: var(--highlight-color);
}

/* Responsiveness */
@media screen and (max-width: 1090px) {

    #headline, #split, nav, footer {
        width: auto;
    }

    nav, footer {
        border-radius: 0;
        border-left: var(--border);
        border-right: var(--border);
    }

    #headline h1, #headline h2 {
        display: block;
        padding-left: 0;
    }

    #split {
        flex-direction: column;
    }
}

